# blockbuilders.tech.speckit

./: .dockerignore  .eslintignore  .gitignore  .npmignore  .prettierignore  AGENTS.md  Makefile  README.md  claude-python.md  iteration.md  iterations-oneline.md  iterations.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt.md
.codex/: auth.json  (+3 more)
apps/backend/: .env.example  README.md  pyproject.toml  ruff.toml
apps/backend/app/: factory.py  main.py
apps/backend/app/api/: __init__.py  alerts.py  ingestion.py  lineage.py  status.py
apps/backend/app/config/: __init__.py  assets.py
apps/backend/app/core/: settings.py  settings_supabase.py
apps/backend/app/data/: ohlcv_seed.py
apps/backend/app/dependencies/: supabase.py
apps/backend/app/jobs/: backfill.py  freshness_monitor.py  vendor_status.py
apps/backend/app/models/: serializers.py
apps/backend/app/schemas/: auth.py  health.py  ohlcv.py  onboarding.py
apps/backend/app/services/: __init__.py  alerts.py  checksum.py  db.py  ingestion.py  lineage_repository.py  lineage_service.py  remediation.py  status_repository.py  status_service.py  telemetry_forwarder.py  vendor_status.py
apps/backend/app/telemetry/: __init__.py  auth.py  ohlcv.py
apps/backend/tests/: conftest.py  test_alerts.py  test_alerts_email.py  test_checksum.py  test_freshness_metrics.py  test_ingestion_edge_cases.py  test_ingestion_metrics.py  test_ingestion_resume.py  test_success_rate.py
apps/backend/tests/contracts/: test_alerts.py  test_checklist_progress.py  test_checklist_resets.py  test_checklist_security.py  test_disclosure_gate.py  test_failures_log.py  test_ingestion.py  test_lineage.py  test_remediation.py  test_status.py  test_status_privacy.py  test_template_select.py
apps/backend/tests/fixtures/: ohlcv_seed.py
apps/backend/tests/integration/: test_health_endpoint.py  test_me_endpoint.py  test_supabase_policies.sql
(+321 files in other folders)
