[project]
name = "blockbuilders-backend"
version = "0.1.0"
description = "FastAPI service exposing the Blockbuilders health contract."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.3.0,<6.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.27.0,<0.28.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.2,<3.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.6.9,<0.7.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.6.9,<0.7.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
pythonpath = ["app"]
testpaths = ["tests"]
